--- a/www/service-detail.html
+++ b/www/service-detail.html
@@ -465,8 +465,8 @@
                 <div class="row">
                     <div class="col-xl-3">
                         <div class="o-footer__col o-footer__col--nav">
-                            <span class="d-block mt-4"><strong>Sitemap</strong></span>
-                            <ul class="a-list a-list--row o-footer__list">
+                            <h5 class="a-title a-title--footer mb-3">Sitemap</h5>
+                            <ul class="a-list a-list--row a-list--white">
                                 <li class="d-block">
                                     <a href="#">Our services</a>
                                 </li>
@@ -474,7 +474,7 @@
                                     <a href="#">About us</a>
                                 </li>
                             </ul>
-                            <ul class="a-list a-list--row o-footer__list">
+                            <ul class="a-list a-list--row a-list--white">
                                 <li>
                                     <a href="#">Career</a>
                                 </li>
@@ -486,45 +486,44 @@
                     </div>
                     <div class="col-xl-6">
                         <div class="o-footer__col">
-                            <address>
-                                <ul class="a-list o-footer__list">
-                                    <li class="mb-3"><strong>Adress</strong></li>
-                                    <li>ONIVON a. s</li>
-                                    <li>Akademika Bedrny 88/6</li>
-                                    <li>500 03 Hradec Králové</li>
+                            <div class="d-flex flex-column mt-3">
+                                <h5 class="a-title a-title--footer mb-3">Adress</h5>
+                                <address class="a-adress">
+                                    ONIVON a. s <br>
+                                    Akademika Bedrny 88/6 <br>
+                                    500 03 Hradec Králové
+                                </address>
+                            </div>
+                            <div class="d-flex flex-column mt-3">
+                                <h5 class="a-title a-title--footer mb-3">Contact</h5>
+                                <ul class="a-list a-list--white a-list--col">
+                                    <li>
+                                        <a href="tel:+420495404311">
+                                            Tel.: +420 495 404 311
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="tel:+420495404312">
+                                            Tel.: +420 495 404 312
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="mailto:info@onivon.cz">
+                                            info@onivon.cz
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="mailto:sale@onivon.cz">
+                                            sale@onivon.cz
+                                        </a>
+                                    </li>
                                 </ul>
-                            </address>
-                            <ul class="a-list o-footer__list">
-                                <li class="mb-3"><strong>Contact</strong></li>
-                                <li>
-                                    <a href="tel:+420495404311">
-                                        Tel.: +420 495 404 311
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="tel:+420495404312">
-                                        Tel.: +420 495 404 312
-                                    </a>
-                                </li>
-                            </ul>
-                            <ul class="a-list o-footer__list">
-                                <li class="mt-5"><strong></strong></li>
-                                <li>
-                                    <a href="mailto:info@onivon.cz">
-                                        info@onivon.cz
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="mailto:sale@onivon.cz">
-                                        sale@onivon.cz
-                                    </a>
-                                </li>
-                            </ul>
+                            </div>
                         </div>
                     </div>
                     <div class="col-xl-3">
                         <div class="o-footer__col o-footer__col--end">
-                            <ul class="a-list o-footer__list">
+                            <ul class="a-list a-list--white o-footer__list">
                                 <li class="mb-3">
                                     Made by <a href="#">WDF</a>
                                 </li>
@@ -537,5 +536,8 @@
                 </div>
             </div>
         </footer>
+
+        <script src="js/bundle.esm.js" type="module"></script>
+
     </body>
     </html>
