--- a/www/about-us.html
+++ b/www/about-us.html
@@ -179,4 +179,80 @@
                </div>
             </div>
         </section>
+        <footer class="o-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-3">
+                        <div class="o-footer__col o-footer__col--nav">
+                            <h5 class="a-title a-title--footer mb-3">Sitemap</h5>
+                            <ul class="a-list a-list--row a-list--white">
+                                <li class="d-block">
+                                    <a href="#">Our services</a>
+                                </li>
+                                <li>
+                                    <a href="#">About us</a>
+                                </li>
+                            </ul>
+                            <ul class="a-list a-list--row a-list--white">
+                                <li>
+                                    <a href="#">Career</a>
+                                </li>
+                                <li>
+                                    <a href="#">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-xl-6">
+                        <div class="o-footer__col">
+                            <div class="d-flex flex-column mt-3">
+                                <h5 class="a-title a-title--footer mb-3">Adress</h5>
+                                <address class="a-adress">
+                                    ONIVON a. s <br>
+                                    Akademika Bedrny 88/6 <br>
+                                    500 03 Hradec Králové
+                                </address>
+                            </div>
+                            <div class="d-flex flex-column mt-3">
+                                <h5 class="a-title a-title--footer mb-3">Contact</h5>
+                                <ul class="a-list a-list--white a-list--col">
+                                    <li>
+                                        <a href="tel:+420495404311">
+                                            Tel.: +420 495 404 311
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="tel:+420495404312">
+                                            Tel.: +420 495 404 312
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="mailto:info@onivon.cz">
+                                            info@onivon.cz
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="mailto:sale@onivon.cz">
+                                            sale@onivon.cz
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3">
+                        <div class="o-footer__col o-footer__col--end">
+                            <ul class="a-list a-list--white o-footer__list">
+                                <li class="mb-3">
+                                    Made by <a href="#">WDF</a>
+                                </li>
+                                <li>
+                                    Copyright © 2022 ONIVON a.s.
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
